[package]
name = "pss_edge"
version = "0.3.0"
authors = ["ndiplacido"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
yaml-rust = "0.4.3"
reqwest = {version = "0.10.7", features = ["blocking", "json", "cookies"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_glacier = "0.45.0"
futures = "0.3.4"
bytes = "0.5.4"
tokio = {version = "0.2.22", features = ["fs", "io-util", "time"]}
tokio-util = {version="0.3.1", features = ["codec"]}
tempfile = "3.1.0"
md5 = "0.7.0"
hex = "0.4.2"
http = "0.2.1"
async-trait = "0.1.35"
chrono = "0.4.11"
chrono-tz = "0.5.2"
sha2 = "0.9.1"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
sloggers = "1.0.1"
base64 = "0.12.3"